--- a/app/src/main/res/layout/activity_ud__a3_a_a15lorenaae.xml
+++ b/app/src/main/res/layout/activity_ud__a3_a_a15lorenaae.xml
@@ -33,4 +33,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/botonpararAsyncTask"
         android:id="@+id/texto"/>
+    <ProgressBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:id="@+id/progressbar"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
 </RelativeLayout>
