--- a/app/src/main/res/layout/activity_ud__a3_a_a15lorenaae.xml
+++ b/app/src/main/res/layout/activity_ud__a3_a_a15lorenaae.xml
@@ -38,18 +38,17 @@
         android:layout_height="wrap_content"
         android:id="@+id/texto2"
         android:layout_below="@id/texto"
-        android:visibility="visible"/>
-    <ProgressBar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:id="@+id/progressbar"
-        android:layout_below="@id/texto2"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"/>
+        android:visibility="invisible"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/progressbar"
+        android:layout_below="@id/texto2"
         android:id="@+id/texto3" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/texto3"
+        android:visibility="invisible"
+        android:id="@+id/texto4"/>
 </RelativeLayout>
