--- a/app/src/main/res/layout/activity_ud__a3_a_a15lorenaae.xml
+++ b/app/src/main/res/layout/activity_ud__a3_a_a15lorenaae.xml
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/texto2"
         android:layout_below="@id/texto"
-        android:visibility="invisible"/>
+        android:visibility="visible"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -49,6 +49,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/texto3"
-        android:visibility="invisible"
+        android:visibility="visible"
         android:id="@+id/texto4"/>
 </RelativeLayout>
