--- a/app/src/main/res/layout/activity_ud__a3_a_a15lorenaae.xml
+++ b/app/src/main/res/layout/activity_ud__a3_a_a15lorenaae.xml
@@ -32,23 +32,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/botonpararAsyncTask"
-        android:id="@+id/texto"/>
+        android:id="@+id/textoprimero"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/texto2"
-        android:layout_below="@id/texto"
+        android:id="@+id/textosegundo"
+        android:layout_below="@id/textoprimero"
         android:visibility="visible"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/texto2"
-        android:id="@+id/texto3" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/texto3"
-        android:visibility="visible"
-        android:id="@+id/texto4"/>
+
 </RelativeLayout>
